# FlatCAM

./: .gitignore  Bookmark.py  CHANGELOG.md  FlatCAM.py  LICENSE  README.md  __main__.py  appDatabase.py  appLogger.py  appPreProcessor.py  appProcess.py  appTool.py  appTranslation.py  app_Main.py  camlib.py  create_translate.sh  create_zipapp.sh  defaults.py  pyproject.toml  requirements.txt  resources.qrc
FlatCAM/: Bookmark.py  FlatCAM.py  appLogger.py  appPool.py  appPreProcessor.py  appTranslation.py  appWorker.py  appWorkerStack.py  app_Main.py  camlib.py  defaults.py  pyproject.toml  requirements.txt  requirements_windows.txt  resources_dark.qrc  resources_dark_rc.py  resources_rc.py  settings.py  setup_ubuntu.sh
appCommon/: Common.py  bilinear.py
appEditors/: AppExcEditor.py  AppGeoEditor.py  AppGerberEditor.py  AppTextEditor.py  appGCodeEditor.py
appGUI/: ColumnarFlowLayout.py  GUIElements.py  MainGUI.py  ObjectUI.py  PlotCanvas.py  PlotCanvasLegacy.py  VisPyCanvas.py  VisPyVisuals.py
appObjects/: AppObject.py  FlatCAMCNCJob.py  FlatCAMDocument.py  FlatCAMExcellon.py  FlatCAMGeometry.py  FlatCAMGerber.py  FlatCAMObj.py  FlatCAMScript.py  ObjectCollection.py
appParsers/: ParseDXF.py  ParseDXF_Spline.py  ParseExcellon.py  ParseFont.py  ParseGerber.py  ParseHPGL2.py  ParsePDF.py  ParseSVG.py
appTools/: ToolAlignObjects.py  ToolCalculators.py  ToolCalibration.py  ToolCopperThieving.py  ToolCorners.py  ToolCutOut.py  ToolDblSided.py  ToolDistance.py  ToolDistanceMin.py  ToolDrilling.py  ToolEtchCompensation.py  ToolExtractDrills.py  ToolFiducials.py  (+20 more)
(+242 files in other folders)
