[tool.poetry]
name = "flatcam-2024-5"
version = "2024.5"
description = "2D Computer-Aided PCB Manufacturing for CNC router"
authors = ["Victoria Danchenko <vika.sonne@rambler.ru>", "Marius Stanciu", "Pablo Caram"]
readme = "README.md"
packages = [{include = "flatcam_2024"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pyqt5 = "5.15.9"
numpy = "1.22"
matplotlib = "3.7.1"
cycler = "0.11.0"
decorator = "5.1.1"
librosa = "0.9.2"
python-dateutil = "2.8.2"
kiwisolver = "1.4.4"
six = "1.16.0"
setuptools = "^65.5"
dill = "0.3.6"
rtree = "1.0.1"
pyopengl = "3.1.6"
vispy = "0.6.6"
ortools = "9.6.2534"
"svg.path" = "6.1"
simplejson = "3.19.1"
shapely = "1.8.4"
freetype-py = "2.3.0"
fontTools = "4.39.3"
rasterio = "1.3.6"
lxml = "4.9.2"
ezdxf = "0.14.2"
qrcode = "7.4.2"
reportlab = "4.0.0"
svglib = "1.5.1"
# gdal = "^3.5.1"
pyserial = "3.5"
langcodes = ">=3.3.0"
language_data = ">=1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
